name:                shell-escape
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            FIXME
category:            FIXME
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
build-type:          Simple
cabal-version:       >=1.6
description:
  FIXME

extra-source-files:
    README
  , test/test.hs

library
  exposed-modules:
      System.Posix.Escape
    , System.Posix.Escape.Unicode
  ghc-options:      -Wall
  build-depends:
      base >= 3 && < 5

source-repository head
    type:     git
    location: git://github.com/kmcallister/shell-escape.git
